feat(uac): allow user select default ownership for resources
