# api/swagger.yaml
@@ -2836,6 +2836,10 @@ definitions:
         type: "integer"
         example: 1
         description: "Active authentication method for the Portainer instance. Valid values are: 1 for managed or 2 for LDAP."
+      DefaultOwnership:
+        type: "integer"
+        example: 1
+        description: "Default ownership for externally created resources. Valid values are: 1 for administrators or 2 for public."
       AllowBindMountsForRegularUsers:
         type: "boolean"
         example: false
@@ -2978,6 +2982,10 @@ definitions:
         description: "Active authentication method for the Portainer instance. Valid values are: 1 for managed or 2 for LDAP."
       LDAPSettings:
         $ref: "#/definitions/LDAPSettings"
+      DefaultOwnership:
+        type: "integer"
+        example: 1
+        description: "Default ownership for externally created resources. Valid values are: 1 for administrators or 2 for public."
       AllowBindMountsForRegularUsers:
         type: "boolean"
         example: false
@@ -3570,6 +3578,10 @@ definitions:
         description: "Active authentication method for the Portainer instance. Valid values are: 1 for managed or 2 for LDAP."
       LDAPSettings:
         $ref: "#/definitions/LDAPSettings"
+      DefaultOwnership:
+        type: "integer"
+        example: 1
+        description: "Default ownership for externally created resources. Valid values are: 1 for administrators or 2 for public."
       AllowBindMountsForRegularUsers:
         type: "boolean"
         example: true
